--- a/inst/jupyter/generating_prevalence_graphs_example.ipynb
+++ b/inst/jupyter/generating_prevalence_graphs_example.ipynb
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "communist-sudan",
+   "id": "unsigned-symposium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "controlling-contract",
+   "id": "norwegian-failing",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "brilliant-package",
+   "id": "marine-glance",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "alpine-equipment",
+   "id": "rocky-heather",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "associate-minister",
+   "id": "czech-range",
    "metadata": {},
    "outputs": [
     {
@@ -639,13 +639,14 @@
     "\n",
     "fig = plt.gcf()\n",
     "fig.set_size_inches(6, 6)\n",
-    "fig.savefig('../../output/graphs/' + db + '_female_rr.png')"
+    "fig.savefig('../../output/graphs/' + db + '_female_rr.png')\n",
+    "# plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "convertible-biotechnology",
+   "id": "certain-shelter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "rolled-circus",
+   "id": "atmospheric-analysis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "impressive-sending",
+   "id": "overhead-handle",
    "metadata": {},
    "outputs": [
     {
@@ -723,13 +724,14 @@
     "plt.ylabel('Count')\n",
     "fig = plt.gcf()\n",
     "fig.set_size_inches(6, 6)\n",
-    "fig.savefig('../../output/graphs/' + db + '_increased_risk.png')"
+    "fig.savefig('../../output/graphs/' + db + '_increased_risk.png')\n",
+    "# plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "scheduled-living",
+   "id": "final-parallel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "specific-pacific",
+   "id": "instant-character",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "pretty-cholesterol",
+   "id": "copyrighted-gender",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "prescribed-rebound",
+   "id": "considerable-hypothetical",
    "metadata": {},
    "outputs": [
     {
@@ -810,13 +812,14 @@
     "plt.ylabel('Count')\n",
     "fig = plt.gcf()\n",
     "fig.set_size_inches(6, 6)\n",
-    "fig.savefig('../../output/graphs/' + db + '_age_dist.png')"
+    "fig.savefig('../../output/graphs/' + db + '_age_dist.png')\n",
+    "# plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "optional-rider",
+   "id": "scenic-usage",
    "metadata": {},
    "outputs": [],
    "source": [
