--- a/inst/jupyter/python_move_files.ipynb
+++ b/inst/jupyter/python_move_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "missing-legend",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "cutting-captain",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "annual-parker",
    "metadata": {},
    "outputs": [
@@ -217,31 +217,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
+   "id": "antique-clearance",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11111_summary.csv'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('../../output/summaries/' + db + '/*')[0].split('\\\\')[-1].split('_')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "married-lingerie",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for cohort_file_id in cohort_files.cohortId:\n",
+    "for filepath in glob.glob('../../output/summaries/' + db + '/*.csv'):\n",
     "#     if os.path.exists('../../output/OLD_summaries/' + db + '/' + str(cohort_file_id) + '_3yronly_summary.csv'):\n",
     "#         continue;\n",
+    "\n",
+    "    cohort_file_id = int(filepath.split('\\\\')[-1].split('_')[0])\n",
     "    \n",
     "    if phenotypes[phenotypes.Cohort_ID == cohort_file_id].Lookback.values[0] == 1:\n",
-    "        try:\n",
-    "            os.rename('../../output/summaries/' + db + '/' + str(cohort_file_id) + '_summary.csv', '../../output/OLD_summaries/' + db + '/' + str(cohort_file_id) + '_3yronly_summary.csv')\n",
-    "        except FileNotFoundError:\n",
-    "            continue\n",
+    "        os.rename('../../output/summaries/' + db + '/' + str(cohort_file_id) + '_summary.csv', '../../output/OLD_summaries/' + db + '/' + str(cohort_file_id) + '_3yronly_summary.csv')    \n",
     "    elif phenotypes[phenotypes.Cohort_ID == cohort_file_id].Lookback.values[0] == 10:\n",
-    "        try:\n",
-    "            os.rename('../../output/summaries/' + db + '/' + str(cohort_file_id) + '_summary.csv', '../../output/OLD_summaries/' + db + '/' + str(cohort_file_id) + '_3yronly_summary.csv')\n",
-    "        except FileNotFoundError:\n",
-    "            continue"
+    "        os.rename('../../output/summaries/' + db + '/' + str(cohort_file_id) + '_summary.csv', '../../output/OLD_summaries/' + db + '/' + str(cohort_file_id) + '_3yronly_summary.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "premier-string",
+   "id": "fatal-regression",
    "metadata": {},
    "outputs": [],
    "source": []
